deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
      - name: simple
        image: docker.io/brotherlogic/simple:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: simple
spec:
  type: LoadBalancer
  selector:
    app: simple
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
