ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: ingress
  namespace: default
spec:
  rules:
  - host: simple.brotherlogic-backend.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple
            port: 
              name: grpc
